# mit

./: README.md
R-notebooks/: notebook0.Rmd  notebook1.Rmd  notebook2.Rmd  notebook3.Rmd
consort-diagram/: LICENCE  README.md  pyproject.toml  requirements.txt
consort-diagram/cohort-selection-example/: cohort_selection.py  utils.py
consort-diagram/src/: plot_example.py
